Package: aroma.core
===================

Version: 2.5.10 [2012-08-26]
o DOCUMENTATION: Clarified that when colBinnedSmoothing() is done
  over zero-length bins, the output for those bins will be NA.
o BUG FIX: colBinnedSmoothing(..., xOut=xOut) would return binned
  values in the incorrect order, iff 'xOut' was not ordered.
  Added a systems test for this case.


Version: 2.5.9 [2012-08-22]
o Improved the AromaRepository class.


Version: 2.5.8 [2012-08-21]
o ROBUSTNESS: Now the package startup message is outputted at the
  very end.  Previously it was done before some additional setup,
  which could potentially fail.
o ROBUSTNESS: fitWRMA() and fitWHRCModel() now call rcModelWPLM() 
  of preprocessCore instead of .Call(..., PACKAGE="preprocessCore").
  Doing so will somewhat slow down the speed, because rcModelWPLM()
  introduces some non-needed validation of the arguments.
  This caused their arguments 'psiCode' and 'psiK' to be dropped.


Version: 2.5.7 [2012-08-08]
o ROBUSTNESS: Added 'preprocessCore' as a suggested package, because
  some of the internal functions rely on that package.  This was never
  an issue, because those functions were called by wrapper functions
  in aroma.affymetrix that assert that the package is indeed loaded.


Version: 2.5.6 [2012-07-21]
o Added exportAromaUnitPscnBinarySet() for AromaUnitTotalCnBinarySet.
o Added alpha versions of classes AromaUnitPscnBinary(File|Set).
o Added getNumberOfFilesAveraged() to AromaUnitSignalBinaryFile.
  Formely only for AromaUnitTotalCnBinaryFile.


Version: 2.5.5 [2012-07-17]
o Updated package dependencies.


Version: 2.5.4 [2012-07-10]
o Now package imports R.devices, because it uses some of its
  device drivers that previously were in R.utils.


Version: 2.5.3 [2012-06-18]
o FIX: Fixed a typo in an error message generated by byChipType()
  for several annotation data file classes.


Version: 2.5.2 [2012-05-30]
o Updated package dependencies.