@@ -7,6 +7,8 @@ o DOCUMENTATION: Clarified that when colBinnedSmoothing() is done
 o BUG FIX: colBinnedSmoothing(..., xOut=xOut) would return binned
   values in the incorrect order, iff 'xOut' was not ordered.
   Added a systems test for this case.
+o BUG FIX: colBinnedSmoothing(..., xOut=xOut) could generate bins
+  at the ends that did not contain the outer most 'xOut' values.
 
 
 Version: 2.5.9 [2012-08-22]
